# pof-management-system

./: .gitignore  CMakeLists.txt  README.md  employee.cpp  employee.h  employeemanager.cpp  employeemanager.h  facerecognitionwindow.cpp  facerecognitionwindow.h  facerecognitionwindow.ui  introwindow.cpp  introwindow.h  introwindow.ui  inventorymanager.cpp  inventorymanager.h  item.cpp  item.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  main.h  maintenancemanager.cpp  maintenancemanager.h  maintenancerecord.cpp  maintenancerecord.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  productionlog.cpp  productionlog.h  productionlogmanager.cpp  productionlogmanager.h  user.h  usermanager.cpp  usermanager.h
